    response to the command "help" with no arguments), command lines with
    a subcommand and a summary option will be run with two arguments: the
    value of the summary option and then the subcommand.  This allows
    proper generation of command summaries even for users who only have
    access to a few subcommands of a command.  Patch from Remi Ferrand.

remctl 3.12 (2016-07-29)

    Add a new server implementation, remctl-shell.  This does not use the
    remctl protocol; instead, it is meant to be run via ssh by being
    configured as the shell of a dedicated user.  It interprets a command
    it was given as a remctl command, using the same configuration and
    authorization checking as the normal remctl server.  This can be
    useful to introduce remctl into an environment that has ssh public key
    authentication instead of Kerberos.  remctl-shell has some significant
    limitations inherited from ssh and requires some setup to use.  See
    its manual page for more information.

    Add a new configuration option, sudo, which tells remctld and
    remctl-shell to run the command as a different user using sudo.  The
    path to the sudo binary is determined when remctld is compiled.
    Normally, it's more convenient to use the existing user option, but it
    relies on remctld running as root.  If running the daemon as a
    non-root user, or when running remctl-shell as a non-root user, this
    option may work better.

remctl 3.11 (2016-05-07)

    The PHP bindings have been ported to PHP 7, based on work by Nish
    Aravamudan.  The PHP 7 API is sufficiently different that this was
    done by forking the PHP code and creating a new version for PHP 7 and
    later, chosing which extension to compile based on the discovered
    version of PHP.  Currently, there is no functionality difference, but
    the PHP 5 extension should be considered frozen and may not get any
    new features.  It will eventually be removed in a future version of