@@ -31,11 +31,11 @@
 #if TESTING
 # undef inet_ntoa
 # define inet_ntoa test_inet_ntoa
-const char *test_inet_ntoa(const struct in_addr);
+char *test_inet_ntoa(struct in_addr);
 #endif
 
-const char *
-inet_ntoa(const struct in_addr in)
+char *
+inet_ntoa(struct in_addr in)
 {
     static char buf[16];
     const unsigned char *p;
