@@ -31,7 +31,7 @@ BEGIN {
     # This version should match the corresponding rra-c-util release, but with
     # two digits for the minor version, including a leading zero if necessary,
     # so that it will sort properly.
-    $VERSION = '6.00';
+    $VERSION = '6.01';
 }
 
 # A regular expression matching the version string for a module using the
